force-app/main/default/objects/Inventory_Movement__c/Inventory_Movement__c.object-meta.xml
<CustomObject>
    <label>Inventory Movement</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Movement ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inventory Movements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>