force-app/main/default/objects/Inventory_Movement__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <formula>CASE(TEXT(Movement__c),&quot;Restocked&quot;,&quot;HealthGAINS&quot;,Asset__r.Account.FirstName &amp;&quot; &quot;&amp;  Asset__r.Account.LastName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account</label>
    <type>Text</type>
</CustomField>