force-app/main/default/objects/Inventory_Movement__c/fields/Balance__c.field-meta.xml
<CustomField>
    <fullName>Balance__c</fullName>
    <formula>Quantity__c * CASE(Movement__c,&quot;Restocked&quot;,1,&quot;Closed&quot;,0,-1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>