force-app/main/default/objects/Inventory_Movement__c/fields/Inventory_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Snapshot__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inventory Snapshot</label>
    <referenceTo>Inventory_Snapshot__c</referenceTo>
    <relationshipLabel>Inventory Movements</relationshipLabel>
    <relationshipName>Inventory_Movements</relationshipName>
    <type>Lookup</type>
</CustomField>