force-app/main/default/objects/Inventory_Movement__c/fields/Movement__c.field-meta.xml
<CustomField>
    <fullName>Movement__c</fullName>
    <label>Movement</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Restocked</fullName>
            </value>
            <value>
                <fullName>Open Opportunity</fullName>
            </value>
            <value>
                <fullName>Owed</fullName>
            </value>
            <value>
                <fullName>Claimed</fullName>
            </value>
            <value>
                <fullName>Broken</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>On Order</fullName>
                <isActive>false</isActive>
                <label>On Order</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>