force-app/main/default/objects/Inventory_Movement__c/fields/Product_Group_ID__c.field-meta.xml
<CustomField>
    <fullName>Product_Group_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Product Group ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>