force-app/main/default/objects/Inventory_Movement__c/validationRules/ClaimedAssetRule.validationRule-meta.xml
<ValidationRule>
    <fullName>ClaimedAssetRule</fullName>
    <active>true</active>
    <description>Claimed Movements must have Assets</description>
    <errorConditionFormula>AND(
    ISBLANK( Asset__c ),
    ISPICKVAL ( Movement__c, &quot;Claimed&quot;)
    )</errorConditionFormula>
    <errorDisplayField>Asset__c</errorDisplayField>
    <errorMessage>If you are creating an &quot;Claimed&quot; record, you must indicate the Asset that this product is Claimed to.</errorMessage>
</ValidationRule>