force-app/main/default/objects/Inventory_Movement__c/validationRules/OwedAssetRule.validationRule-meta.xml
<ValidationRule>
    <fullName>OwedAssetRule</fullName>
    <active>true</active>
    <description>Owed Movements must have Assets</description>
    <errorConditionFormula>AND(
    ISBLANK( Asset__c ),
    ISPICKVAL ( Movement__c, &quot;Owed&quot;)
    )</errorConditionFormula>
    <errorDisplayField>Asset__c</errorDisplayField>
    <errorMessage>If you are creating an &quot;Owed&quot; record, you must indicate the Asset that this product is Owed to.</errorMessage>
</ValidationRule>